# zond-cli

./: Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  terminal.rs
cli/src/commands/: discover.rs  info.rs  listen.rs  scan.rs
cli/src/terminal/: banner.rs  colors.rs  format.rs  host.rs  insights.rs  logging.rs  mod.rs  network_fmt.rs  print.rs  spinner.rs
src/terminal/: input.rs
