[package]
name = "mappr-cli"
version = "0.3.0"
edition = "2024"

[dependencies]
mappr-core = { workspace = true }
mappr-common = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
pnet = { workspace = true }
unicode-width = "0.2.2"
sys-info = "0.9"
is-root = "0.1.3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-indicatif = "0.3.14"

[[bin]]
name = "mappr"
path = "src/main.rs"
