[package]
name = "zond-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
zond-engine = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
pnet = { workspace = true }
tracing = { workspace = true }

tokio = { version = "1.47.1", features = ["full"] }
unicode-width = "0.2.2"
sys-info = "0.9"
is-root = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-indicatif = "0.3.14"

[[bin]]
name = "zond"
path = "src/main.rs"
